fixed spacing in headline container

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -167,6 +167,10 @@ address {
 
 .container-headline {
 	font-size: 1em;
+
+	p {
+		margin: 0 auto;
+	}
 }
 
 /* padding around all content */
